fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -441,7 +441,7 @@ a:visited {
     }
 
    .homePage h5 {
-        top:27vh;
+        top:25vh;
         font-size:20px;
    }
 
